<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.ludovic.crespeau.quarto.MainActivity">

    <TextView
        android:id="@+id/quatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quarto"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/pvp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/player_vs_player"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/quatro"/>

    <Button
        android:id="@+id/pva"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/player_vs_ai"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/pvp"/>

    <Button
        android:id="@+id/regle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/regle_du_jeux"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/pva"/>
</RelativeLayout>
